--- a/willnotes/styles.css
+++ b/willnotes/styles.css
@@ -140,7 +140,7 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 0.8em;
     font-weight: 400;
-    background: url(gfx/pagebg.jpg);
+    background: #345;
     padding-bottom: 50px;
 }
 
@@ -175,6 +175,24 @@ body > header > * {
     vertical-align: top;
 }
 
+.popup-form {
+    background: #fff;
+    padding: 50px;
+}
+
+.popup-form .message {
+    margin-bottom: 10px;
+}
+
+.popup-form .input-row {
+    margin-bottom: 10px;
+}
+
+.popup-form .input-row label {
+    display: inline-block;
+    width: 100px;
+}
+
 #destroybox {
     display: inline-block;
     height: 100%;
@@ -189,6 +207,15 @@ body > header > * {
     color: #f00;
 }
 
+#status-text {
+    position: absolute;
+    top: 3px;
+    right: 10px;
+    font-size: 9px;
+    line-height: 1em;
+    text-align: right;
+}
+
 #list-listing,
 #item-new,
 #list-listing .list,
@@ -198,7 +225,7 @@ body > header > * {
     border-radius: 5px;
     background: #fff;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-	overflow: hidden; /* purely for webkit's rounded corner clipping */
+	overflow: visible; /* must show for drag-and-drop */
 }
 
 #side-group {
@@ -318,7 +345,6 @@ body > header > * {
 }
 
 #list-canvas .list-detail .list-item content .ext-img {
-    width: 100%;
 }
 
 #list-canvas .list-detail .actions {
