--- a/plugins/willousel/willousel.css
+++ b/plugins/willousel/willousel.css
@@ -1,3 +1,28 @@
+/* Willstagram */
+.willstagram {
+  text-align: center;
+}
+
+.willstagram .items li {
+  list-style: none;
+  display: inline-block;
+}
+
+.willstagram .items .item {
+    height: 220px;
+}
+
+.willstagram .items .item img {
+    width: auto;
+    height: 100%;
+  vertical-align: top;
+}
+
+.willstagram .items .item .desc {
+    display: none;
+}
+
+/* Willousel */
 .willousel .items {
     display: none;
 }
@@ -7,8 +32,8 @@
 }
 
 .willousel .items .item img {
-	width: auto;
-	height: 100%;
+    width: auto;
+    height: 100%;
 }
 
 .willousel .controls {
@@ -28,6 +53,7 @@
     padding-top: 44px;
     width: 58px;
     opacity: 0.4;
+    line-height: 1em;
 }
 
 .willousel .controls .control-prev {
@@ -47,13 +73,4 @@
 .willousel:hover .controls .control-prev:hover,
 .willousel:hover .controls .control-next:hover {
     opacity: 1;
-}
-
-/* If using for Instagram */
-.willousel.willstagram .items .item {
-    height: 220px;
-}
-
-.willousel.willstagram .items .item .desc {
-    display: none;
 }
